--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,83 @@
 h3 {
   margin-bottom: 0;
 }
+
+.header
+{
+  text-align: center;
+}
+
+
+.facts
+{
+  border: 1px;
+  border-color: grey;
+  border-style: solid;
+  border-radius: 5px;
+  border-spacing: 0px;
+
+}
+
+table
+{
+  margin: auto;
+  width: 100%;
+}
+
+th
+{
+  text-align: left;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+} 
+
+td
+{
+
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+
+tr:nth-child(even)
+{
+  background-color: rgb(201, 201, 201);
+  
+}
+
+
+.links
+{
+  display: flex;
+  justify-content: space-between;
+  padding-left: 0px;
+
+}
+
+.links > li
+{
+  list-style-type: none;
+  background-color: rgb(61, 172, 236);
+  flex: 1;
+  margin-right: 20px;
+}
+
+.links > li:last-child
+{
+  margin-right: 0px;
+}
+
+
+.links > li > a
+{
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
+
+  
+}
